--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
 <!DOCTYPE html>
+<!--
+hi
+-->
+
+<html>
+  <head>
+    <title>Valaureant</title>
+    <style type=text/css>
+      div{
+        color: white;
+        background-color: E1ACAF;
+        font-size: 25;
+        font-family: KG red hands
+      }
+    </style>
+  </head>
+  <body>
+    <div>Valaureant</div>
+  </body>
+</html>
