--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ hi
       div{
         color: white;
         background-color: E1ACAF;
+        margin: 2 px;
         font-size: 25;
         font-family: KG red hands
       }
